<resources>
    <string name="app_name">ToDoListOnline</string>
    <string name="input_your_email">Введите ваш email</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="login">Войти</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="go_connect">Давайте познакомимся!</string>
    <string name="enter_your_login">Введите ваш логин</string>
    <string name="reset_password_button">Сбросить пароль</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="input_login">Введите логин</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Добавить задание</string>
</resources>